force-app/main/default/objects/ecosystems_svcs__CVA__c/ecosystems_svcs__CVA__c.object-meta.xml
<CustomObject>
    <description>Collaborative Value Assessment (CVA) specific document data</description>
    <label>Collaborative Value Assessment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaborative Value Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>