force-app/main/default/objects/ecosystems_svcs__CVA__c/fields/ecosystems_svcs__businessValueDocument__c.field-meta.xml
<CustomField>
    <fullName>ecosystems_svcs__businessValueDocument__c</fullName>
    <description>Master Business Value Document record</description>
    <label>Business Value Document</label>
    <referenceTo>ecosystems_svcs__IBC__c</referenceTo>
    <relationshipLabel>Collaborative Value Assessments</relationshipLabel>
    <relationshipName>Collaborative_Value_Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>