force-app/main/default/objects/ecosystems_svcs__CVA__c/fields/ecosystems_svcs__costOfDelay__c.field-meta.xml
<CustomField>
    <fullName>ecosystems_svcs__costOfDelay__c</fullName>
    <label>Cost Of Delay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>