force-app/main/default/objects/ecosystems_svcs__CVA__c/fields/ecosystems_svcs__etlUpdateTs__c.field-meta.xml
<CustomField>
    <fullName>ecosystems_svcs__etlUpdateTs__c</fullName>
    <description>Extract Transform Load data update timestamp</description>
    <label>ETL Update</label>
    <type>DateTime</type>
</CustomField>