force-app/main/default/objects/ecosystems_svcs__CVA__c/fields/ecosystems_svcs__mirr__c.field-meta.xml
<CustomField>
    <fullName>ecosystems_svcs__mirr__c</fullName>
    <label>MIRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>