force-app/main/default/objects/ecosystems_svcs__CVA__c/fields/ecosystems_svcs__yearlyBenefit__c.field-meta.xml
<CustomField>
    <fullName>ecosystems_svcs__yearlyBenefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Yearly totals for financial benefits</description>
    <label>Yearly Benefit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ecosystems_svcs__YearlyFinancial__c.ecosystems_svcs__financialType__c</field>
            <operation>equals</operation>
            <value>BENEFIT</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ecosystems_svcs__YearlyFinancial__c</referenceTo>
    <relationshipLabel>Collaborative Value Assessments</relationshipLabel>
    <relationshipName>Collaborative_Value_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>