force-app/main/default/objects/ecosystems_svcs__CVA__c/validationRules/ecosystems_svcs__CVA_Ext_ID_Matches_Document_Ext_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>ecosystems_svcs__CVA_Ext_ID_Matches_Document_Ext_ID</fullName>
    <active>true</active>
    <errorConditionFormula>ecosystems_svcs__extDocId__c  &lt;&gt;  ecosystems_svcs__businessValueDocument__r.ecosystems_svcs__extId__c</errorConditionFormula>
    <errorMessage>External ID of the CVA must match the External ID of the Document</errorMessage>
</ValidationRule>